--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
+    "react-tweet-embed": "^2.0.0",
     "redux": "^4.2.0",
     "sharp": "^0.31.3",
     "typescript": "4.9.4"
