--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "axios": "^1.2.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
@@ -27,10 +28,12 @@
     "react-twitter-embed": "^4.0.4",
     "redux": "^4.2.0",
     "sharp": "^0.31.3",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@redux-devtools/core": "^3.13.1",
+    "@types/aos": "^3.0.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
